--- a/ProductService/app/views/layout.ejs
+++ b/ProductService/app/views/layout.ejs
@@ -51,13 +51,14 @@
 			                	<li><a href="/product/new">Add Product</a></li>
 			              	</ul>
 			            </li>
-			            <li><a href="#">Tiendas</a></li>
+			            <li><a href="#">Shops</a></li>
 					<% } %>
 	              </ul>
 	              <ul class="nav navbar-nav navbar-right">
 	              	<% if (!user) { %>	              	                
 	                	<li><a href="/auth/google">Login With Google</a></li>
 	                <% } else { %>
+	                	<li><a href="/orders">Orders</a></li>
 	                	<li><a href="/shopcart">ShopCart</a></li>
 	                	<li class="dropdown">
 			              	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= user.google.name%> <b class="caret"></b></a>
