Added domains, mem usage and log for db requests

--- a/DeliveryService/Client/views/deliver.html
+++ b/DeliveryService/Client/views/deliver.html
@@ -11,7 +11,7 @@
 <div class="row" style="margin-top: 30px;">
 	<div class="col-sm-12">
 		<div class="alert alert-success">
-			All delivery requests will be shown here!
+			All delivery requests will be shown here when users close their carts (ProductService CheckOut)!
 		</div>	
 
 		<div ng-repeat="msg in model.buffer">
